Refactoring, increase connection timeout for testing process